# infercam_onnx

./: Cargo.toml  LICENSE-THIRD-PARTY  README.md
.github/workflows/: github-actions.yml
cam_sender/: Cargo.toml
cam_sender/src/: lib.rs  main.rs  sensors.rs
common/: Cargo.toml
common/src/: lib.rs  protocol.rs
infer_server/: Cargo.toml
infer_server/src/: data_socket.rs  endpoints.rs  inferer.rs  lib.rs  main.rs  meter.rs  nn.rs  protocol.rs  pubsub.rs  router.rs  utils.rs
infer_server/src/hour_glass/: data_socket.rs  endpoints.rs  inferer.rs  mod.rs  router.rs
infer_server/src/msg_passing/: data_socket.rs  endpoints.rs  mod.rs  router.rs
infer_server/tests/: integration_tests.rs
infercam_onnx/src/: lib.rs  main.rs
src/: lib.rs  main.rs  nn.rs  responder.rs  routes.rs  sensors.rs
tests/: integration_tests.rs
