[package]
name = "webcam_onnx"
version = "0.1.0"
edition = "2018"

[lib]
name = "libwebcam_onnx"
path = "src/lib.rs"

[[bin]]
name = "webcam_onnx"
path = "src/main.rs"

[dependencies]
# This might require libv4l-dev on your system
rscam = "0.5.5"
actix-web = "3"
futures-core = "0.3.17"
# onnxruntime = { version = "0.0.14", features = ["model-fetching"] }
tract-onnx = "0.15.5"
image = "0.23.14"
