[package]
name = "webcam_onnx"
version = "0.2.1"
edition = "2018"

[lib]
name = "libwebcam_onnx"
path = "src/lib.rs"

[[bin]]
name = "webcam_onnx"
path = "src/main.rs"

[dependencies]
# This requires libv4l-dev on your system
rscam = "^0.5.5"
actix-web = "3"
futures-core = "^0.3.17"
tract-onnx = "^0.15.5"
image = "^0.23.14"
imageproc = "^0.22.0"
ndarray = "^0.15.3"
smallvec = "^1.7.0"
log = "^0.4.14"
env_logger = "^0.9.0"
rusttype = "^0.9.2"
structopt = "^0.3"
