[workspace]
resolver = "2"

members = ["infer_server", "cam_sender", "common"]

[workspace.dependencies]
anyhow = "1.0.75"
axum = "0.6.4"
bincode = "1.3.3"
bytes = "1.4.0"
clap = "4.0.11"
common = { path = "./common" }
dirs = "4.0.0"
env_logger = "0.11.5"
futures = "0.3.26"
futures-core = "0.3.24"
image = "0.24.5"
imageproc = "0.23.0"
lazy_static = "1.4.0"
log = "0.4.17"
ndarray = "0.15.6"
reqwest = "0.11.14"
rscam = "0.5.5"
rusttype = "0.9.3"
serde = "1.0.152"
smallvec = "1.10.0"
thingbuf = { version = "0.1.4", default-features = false }
tokio = "1.25.0"
tokio-stream = "0.1.14"
tokio-util = "0.7.4"
tract-onnx = "0.19.2"
turbojpeg = "0.5.2"
