[package]
name = "cam_sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
env_logger = "0.9.1"
futures-core = "0.3.24"
log = "0.4.17"
reqwest = { version = "0.11.12", features = ["stream", "multipart"] }
rscam = "0.5.5"
tokio = { version = "1.21.2", features = ["full"] }
