[package]
name = "cam_sender"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive"] }
common = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
log = { workspace = true }
rscam = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec", "net"] }
