[package]
name = "infer_server"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "infer_server"
path = "src/lib.rs"

[dependencies]
async-stream = "0.3.3"
axum = { version = "0.5.16", features = ["multipart", "query"] }
bytes = "1.2.1"
common = { path = "../common" }
dirs = "4.0.0"
env_logger = "0.9.1"
futures = "0.3.24"
image = "0.24.4"
imageproc = "0.23.0"
lazy_static = "1.4.0"
log = "0.4.17"
ndarray = "0.15.6"
reqwest = { version = "0.11.12", features = ["stream"] }
rusttype = "0.9.2"
serde = { version = "1.0.145", features = ["derive"] }
simple-error = "0.2.3"
smallvec = "1.10.0"
tokio = { version = "1.21.2", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
tract-onnx = "0.18.0"
turbojpeg = { version = "0.5.2", features = ["image"] }
