[package]
name = "infer_server"
version = "0.3.2"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
argh = { workspace = true }
axum = { workspace = true, features = ["multipart", "query"] }
bytes = { workspace = true }
common = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
ndarray = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
rusttype = { workspace = true }
serde = { workspace = true, features = ["derive"] }
smallvec = { workspace = true }
thingbuf = { workspace = true, features = ["static"] }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["net", "codec"] }
tract-onnx = { workspace = true }
turbojpeg = { workspace = true, features = ["image"] }
